[package]
name = "cli-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
failure = "0.1.8"
indicatif = { version = "0.17.11", features = ["rayon"] }
reqwest = { version = "0.12.20", features = ["json"] }
url = { version = "2.5.4", features = ["serde"] }
