[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
console = "0.15.11"
failure = "0.1.8"
indicatif = { version = "0.17.11", features = ["rayon"] }
reqwest = { version = "0.12.20", features = ["json", "blocking"] }
tokio = "1.45.1"
url = { version = "2.5.4", features = ["serde"] }
